# corp-rfp-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  MIGRATION.md  README.md  pyproject.toml  requirements.txt
.claude/rules/: code-standards.md  python-env.md  testing.md
config/: overrides.yaml
config/product_profiles/: _changelog.jsonl  _generation_report.json
data/kb/: dedup_report.json  improve_report.json  wms_arch_doc.json
docs/: ARCHITECTURE_LESSONS_LEARNED.md  STRUCTURAL_DEBT.md
scripts/: check_api_keys.py  debug_rag_retrieval.py  test_api_keys.py
src/: answer_selector.py  apply_overrides.py  batch_llm.py  generate_product_profiles.py  generate_review_pack.py  import_review_pack.py  kb_archive_search.py  kb_dedup.py  kb_embed_chroma.py  kb_eval.py  kb_extract_historical.py  kb_index_sync.py  kb_ingest.py  kb_migrate_to_files.py  kb_quality_scorer.py  kb_reclassify.py  kb_simulate_rfp.py  kb_stats.py  kb_to_markdown.py  llm_router.py  merge_profiles.py  rfp_answer_word.py  rfp_excel_agent.py  rfp_feedback.py  rfp_word_agent.py  validate_profiles.py  vault_adapter.py  word_analyzer.py  word_filler.py
src/anonymization/: __init__.py  clean_kb.py  config.py  core.py  middleware.py  scan_kb.py
src/corp_rfp_agent/: __init__.py  cli.py
tasks/: lessons.md  todo.md
tests/: conftest.py  create_fixtures.py  test_answer_selector.py  test_api_keys.py  test_auto_promote.py  test_batch_llm.py  test_cli_smoke.py  test_excel_acceptance.py  test_generate_review_pack.py  test_import_review_pack.py  test_kb_dedup.py  test_kb_eval.py  test_kb_index_sync.py  test_kb_ingest.py  test_kb_quality_scorer.py  test_kb_reclassify.py  test_kb_simulate_rfp.py  test_kb_to_markdown.py  test_product_profiles.py  test_recency.py  test_rfp_feedback.py  test_router_acceptance.py  test_validate_profiles.py  test_vault_adapter.py  test_word_acceptance.py
tests/fixtures/: excel_golden.xlsx  excel_golden_expected.json  word_golden.docx  word_golden_expected.json
tests/test_phase1/: test_anonymizer.py  test_config.py  (+3 more)
(+103 files in other folders)
